--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -8,20 +8,18 @@ server {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:8000/api/;
   }
-
-   location /admin/ {
+  location /admin/ {
     client_max_body_size 20M;
     proxy_set_header Host $http_host;
     proxy_pass http://backend:8000/admin/;
   }
 
-  location / {
-    alias /staticfiles/;
-    index index.html;
+  location /media/ {
+    alias /media/;
   }
 
-    location /media/ {
-    proxy_set_header Host $http_host;
-    alias /media/;
+  location / {
+    alias /staticfiles/;
+    try_files $uri $uri/ /index.html;
   }
 }
