--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -33,7 +33,7 @@ services:
       - backend
     volumes:
       - static:/staticfiles/
-      - media:/media/
+      - media:/media
     ports:
       - 8000:80
 
