--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,42 +1,25 @@
 server {
-    listen 80;
+  listen 80;
+  index index.html;
+  server_tokens off;
 
-    server_name sonb.hopto.org;
+  location /api/ {
+    client_max_body_size 20M;
+    proxy_set_header Host $http_host;
+    proxy_pass http://backend:8000/api/;
+  }
+  location /admin/ {
+    client_max_body_size 20M;
+    proxy_set_header Host $http_host;
+    proxy_pass http://backend:8000/admin/;
+  }
 
-    location /media/ {
-        root /var/html;
-    }
+  location /media/ {
+    alias /media;
+  }
 
-    location /static/admin {
-        root /var/html;
-    }
-
-     location /static/rest_framework/ {
-        root /var/html/;
-    }
-
-    location /admin/ {
-        proxy_pass http://backend:8000/admin/;
-    }
-
-    location /api/ {
-        proxy_set_header Host $host;
-        proxy_set_header        X-Forwarded-Host $host;
-        proxy_set_header        X-Forwarded-Server $host;
-        proxy_pass http://backend:8000;
-    }
-
-    location / {
-        root /usr/share/nginx/html;
-        index  index.html index.htm;
-        try_files $uri /index.html;
-        proxy_set_header        Host $host;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        X-Forwarded-Proto $scheme;
-      }
-      error_page   500 502 503 504  /50x.html;
-      location = /50x.html {
-        root   /var/html/frontend/;
-      }
+  location / {
+    alias /staticfiles/;
+    try_files $uri $uri/ /index.html;
+  }
 }
