--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,6 +29,7 @@ pathspec==0.11.2
 Pillow==10.1.0
 platformdirs==3.11.0
 pycodestyle==2.11.1
+psycopg2-binary==2.9.3
 pycparser==2.21
 pyflakes==3.1.0
 PyJWT==2.8.0
