--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,12 +10,17 @@ coreschema==0.0.4
 cryptography==41.0.5
 defusedxml==0.8.0rc2
 Django==3.2.16
+django-colorfield==0.10.1
 django-filter==23.3
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.0
 djoser==2.2.0
+drf-extra-fields==3.7.0
+filetype==1.2.0
 flake8==6.1.0
 flake8-isort==6.0.0
+gunicorn==20.1.0
 idna==3.4
 isort==5.12.0
 itypes==1.2.0
@@ -28,8 +33,8 @@ packaging==23.2
 pathspec==0.11.2
 Pillow==10.1.0
 platformdirs==3.11.0
-pycodestyle==2.11.1
 psycopg2-binary==2.9.3
+pycodestyle==2.11.1
 pycparser==2.21
 pyflakes==3.1.0
 PyJWT==2.8.0
@@ -47,4 +52,3 @@ typing_extensions==4.8.0
 uritemplate==4.1.1
 urllib3==2.0.7
 webcolors==1.13
-gunicorn==20.1.0
