--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,10 @@ jobs:
         with:
             python-version: 3.9
 
+      - name: create env
+        run: |
+          echo "${{ secrets.ENV_FILE }}" > .env
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
