--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -20,6 +20,6 @@ server {
 
   location / {
     alias /staticfiles/;
-    try_files $uri $uri/ /index.html;
+    try_files $uri /index.html;
   }
 }
