--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -6,12 +6,12 @@ server {
   location /api/ {
     client_max_body_size 20M;
     proxy_set_header Host $http_host;
-    proxy_pass http://backend:8000/api/;
+    proxy_pass https://backend:8000/api/;
   }
   location /admin/ {
     client_max_body_size 20M;
     proxy_set_header Host $http_host;
-    proxy_pass http://backend:8000/admin/;
+    proxy_pass https://backend:8000/admin/;
   }
 
   location /media/ {
