--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.7.2
+autoflake==2.2.1
 black==23.10.1
 certifi==2023.7.22
 cffi==1.16.0
@@ -17,11 +18,13 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 djoser==2.2.0
 drf-extra-fields==3.7.0
+drf-yasg==1.21.7
 filetype==1.2.0
 flake8==6.1.0
 flake8-isort==6.0.0
 gunicorn==20.1.0
 idna==3.4
+inflection==0.5.1
 isort==5.12.0
 itypes==1.2.0
 Jinja2==3.1.2
@@ -41,6 +44,7 @@ PyJWT==2.8.0
 python-dotenv==1.0.0
 python3-openid==3.2.0
 pytz==2023.3.post1
+PyYAML==6.0.1
 requests==2.31.0
 requests-oauthlib==1.3.1
 six==1.16.0
